--- a/register.css
+++ b/register.css
@@ -1,7 +1,7 @@
 body
 {
 	//background-color: blue;
-	background-image: url("https://printler.com/media/photo/133556.jpg");
+	background-image: url("https://i.redd.it/4k-wallpaper-sports-cars-on-track-v0-9ujw5dx929sa1.jpg?width=3840&format=pjpg&auto=webp&s=6da227a49a303421979ac42f8f9b23d04a44997a");
 	background-repeat : no-repeat;
 	background-size : cover;
 }
@@ -92,8 +92,8 @@ p
    align-items: center;
    display: flex;
    justify-content: center;
-   margin-top: 10em;
-   color : black;
-   font-size: 29px;
-   opacity: 0.5;
+   margin-top: 4em;
+   color : white;
+   font-size: 40px;
+   opacity: 0.7;
 }
