--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 .Titre
 {
     font-size: 4.5em;
-    background: linear-gradient(45deg, #ff9900, #ff33cc); /* Dégradé linéaire de couleur */
+    background: linear-gradient(45deg, #ff9900, #ff33cc);
     -webkit-background-clip: text;
     color: transparent;
     margin: 0;
@@ -61,29 +61,24 @@
 }
 .car2
 {
-    //margin-top: 60px;
+    
     overflow: hidden; 
     filter : blur(2px);
+    transition: transform 0.3s ease-in-out; 
     
 }
-.car2 
-{
-    transition: transform 0.3s ease-in-out; 
-}
+
 .car2:hover 
 {
     transform: scale(1.2); 
 }
 .car3
 {
-    //margin-top: 60px;
+    
     overflow: hidden; 
     filter: contrast(150%);
-    
-}
-.car3
-{
     transition: transform 0.3s ease-in-out; 
+    
 }
 .car3:hover 
 {
@@ -99,8 +94,9 @@ body {
 }
 .fixed-bottom
 {
-    //border : 1px solid;
-    background-color: steelblue;
+    border: 4px outset #008000; /* Bordure en outset de 4 pixels en couleur verte foncée */
+    border-image: url('https://images.unsplash.com/photo-1464618663641-bbdd760ae84a?q=80&w=1000&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8d2Vic2l0ZSUyMGJhY2tncm91bmR8ZW58MHx8MHx8fDA%3D') 30 round;
+    background-color: None;
 }
 .text
 {
